spacing fix h1 and body

--- a/waifustyles.css
+++ b/waifustyles.css
@@ -30,10 +30,11 @@ body {
     background-color: #5B507A; /* Dark background */
     color: #e0e0e0; /* Light text color */
     margin: 0;
-    padding: 0;
+/*     padding: 0; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 50px; /* Add padding to prevent overlap with fixed navbar */
 }
 
 header {
